Application d'un style générale au formulaire
Le style reste minimaliste pour le moment et doit être amélioré au fur
et à mesure.

--- a/PresentationPrv/src/main/webapp/css/prv.css
+++ b/PresentationPrv/src/main/webapp/css/prv.css
@@ -1,1 +1,18 @@
 @CHARSET "UTF-8";
+
+.formulaire {	/* Mise en forme des cadres */
+	border:1px solid #126EA1;
+	font-weight:normal;
+	padding:5px 10px 10px 10px;
+	margin-top:15px;
+	background-color: #89C6D8;
+}
+
+.formulaire legend{
+  font-weight: bold;
+  border-bottom: 1px solid #89C6D8;
+  color:#CE4300;
+  width: 97%;
+  padding: 0.1em;
+  margin-bottom: 10px;
+}
